--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,3 @@
-/**
-* Wordfind.js 0.0.1
-* (c) 2012 Bill, BunKat LLC.
-* Wordfind is freely distributable under the MIT license.
-* For all details and documentation:
-*     http://github.com/bunkat/wordfind
-*/
-
-
 
 p {
   font: 22pt Calibri;
@@ -18,7 +9,7 @@ h1 {
    margin: 10px 10px 0px 10px;
    }
 
-body{background: url('../src/logo.jpg') fixed no-repeat top right;}
+body{background: url('../src/logo.jpg') fixed no-repeat bottom right;}
 /**
 * Styles for the puzzle
 */
@@ -73,14 +64,14 @@ button::-moz-focus-inner {
 * Styles for the word list
 */
 #words {
-  padding-top: 20px;
-  -moz-column-count: 2;
-  -moz-column-gap: 20px;
-  -webkit-column-count: 2;
-  -webkit-column-gap: 20px;
-  column-count: 2;
-  column-gap: 20px;
-  width: 300px;
+  padding-top: 40px;
+  -moz-column-count: 3;
+  -moz-column-gap: 60px;
+  -webkit-column-count: 3;
+  -webkit-column-gap: 60px;
+  column-count: 3;
+  column-gap: 60px;
+  width: 450px;
 }
 
 #words ul {
